--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^1.18.9"
   },
   "scripts": {
+    "client-install": "cd client && npm install",
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
@@ -22,7 +23,7 @@
     "url": "git+https://github.com/ChavyChaze/calendar.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "Beerware",
   "bugs": {
     "url": "https://github.com/ChavyChaze/calendar/issues"
   },
